Updating ingredients list

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
         <h1>The Room Pizza order</h1>
 
-<p>Half Candian bacon with pineapple.
-Half artichoke with pesto and light on the cheese.</p>
+<p>Half Candian bacon with pineapple.</p>
+<p>Half artichoke with pesto and light on the cheese.</p>
       </section>
 
     </div>
